--- a/src/Stock/Service/StockService/StockService.csproj
+++ b/src/Stock/Service/StockService/StockService.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\..\Infrastructure\Configuration\Contract\ConfigurationContract\ConfigurationContract.csproj" />
     <ProjectReference Include="..\..\..\Model\VO\VO.csproj" />
     <ProjectReference Include="..\..\Contract\StockContract\StockContract.csproj" />
+    <ProjectReference Include="..\..\Contract\StockRepositoryContract\StockRepositoryContract.csproj" />
   </ItemGroup>
 
 </Project>
