--- a/src/Host/hostsettings.json
+++ b/src/Host/hostsettings.json
@@ -1,4 +1,5 @@
 {
+  "connectionString": "Data Source=.;Initial Catalog=Stock;Trusted_Connection=false;Persist Security Info=True;User ID=Stock;Password=Stock@12345",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
