--- a/src/Stock/Contract/StockContract/StockContract.csproj
+++ b/src/Stock/Contract/StockContract/StockContract.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Model\DT\DT.csproj" />
     <ProjectReference Include="..\..\..\Model\VO\VO.csproj" />
   </ItemGroup>
 
