--- a/src/Stock/Repository/StockRepositorySqlServer/StockRepositorySqlServer.csproj
+++ b/src/Stock/Repository/StockRepositorySqlServer/StockRepositorySqlServer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\Data\Contract\RepositoryContract\RepositoryContract.csproj" />
+    <ProjectReference Include="..\..\..\Model\DT\DT.csproj" />
     <ProjectReference Include="..\..\..\Model\VO\VO.csproj" />
     <ProjectReference Include="..\..\Contract\StockRepositoryContract\StockRepositoryContract.csproj" />
   </ItemGroup>
