--- a/src/Gateway/Infrastructure/GatewayLocator/GatewayLocator.csproj
+++ b/src/Gateway/Infrastructure/GatewayLocator/GatewayLocator.csproj
@@ -1,10 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Stock.Infrastructure.GatewayLocator</AssemblyName>
     <RootNamespace>Stock.Infrastructure.GatewayLocator</RootNamespace>
+    <Authors>Alex Tochetto</Authors>
+    <Description>This is the gateway, used to find services using contract in DI.</Description>
+    <RepositoryUrl>https://github.com/alextochetto/StockMonitor/tree/main/src/Gateway/Infrastructure/GatewayLocator</RepositoryUrl>
+    <PackageTags>ASP.NET Core</PackageTags>
+    <tags>ASP.NET Core</tags>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="Images\icon.png" Pack="true" PackagePath=""/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
